cmake_minimum_required(VERSION 3.16)
project(turing-patterns VERSION 1.0 LANGUAGES CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(CMAKE_CXX_STANDARD 20)

set(CMAKE_CXX_FLAGS "-O3")

add_subdirectory(SDL EXCLUDE_FROM_ALL)
add_subdirectory(src)
